test/indexReplaceConsume.slq

def f(x:ğ”¹,y:ğ”¹,z:ğ”¹^2)â‡’((x,y),z);

def main(){
	a:=vector(2,0:ğ”¹);
	((a[0],a[1]),b):=f(a[0],a[1],a); /// error
	return (a,b); /// error
}
